syntax = "proto3";

option go_package = "grpc_prtc/usermgmt";

package usermgmt;


service UserManagement {
    rpc CreateUser(NewUser) returns (User) {}
    rpc GetUsers(GetUsersParams) returns (Userlist) {}
    // rpc GetUser() returns (User) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
}

message NewUser {
    string username = 1;
    string email = 2;
    int32 age = 3;
}
 
message User {
    int32 id = 1; 
    string username = 2;
    string email = 3;
    int32 age = 4;
}

message GetUsersParams {

}

message Userlist {
    repeated User users = 1;
}

message UpdateUserRequest {
    int32 id = 1;
    optional string name = 2;
    optional string email = 3;
    optional int32 age = 4;
}

message UpdateUserResponse {
    User user = 1;
}